Redesign order cards and hide cart on specific routes

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -5,5 +5,5 @@
 </main>
 
 <app-drawer-menu></app-drawer-menu>
-<app-mini-cart></app-mini-cart>
+<app-mini-cart *ngIf="!['/checkout','/pedidos','/perfil'].includes(router.url)"></app-mini-cart>
 
